# openthaigpt-dataeng-exam

./: README.md  pyproject.toml
.dvc/: config
artifacts/: .gitignore  CC-MAIN-20230527223515-20230528013515-00000.warc.gz.dvc
scripts/: preprocess_data.py
src/openthaigpt_data_test/: constants.py  image_caption_extracter.py  warc_reader.py
tests/: test_image_caption_extracter.py
